...
                    heroLore = data.heroLore,
                    name = data.name,
                    element = data.element,
                    rarity = data.rarity,
                    classes = data.classes,
                    zodiac = data.zodiac,
                    skills = data.skills,
                    navigateBack = navigateBack
                )
            }
            is UiState.Error -> {}
        }
    }
...
        contentAlignment = Alignment.TopCenter
    ){
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .verticalScroll(scrollState)
                .testTag("screenScroll"),
            horizontalAlignment = Alignment.CenterHorizontally,
        ){
            // Portrait image dari hero
            Box(
                modifier = Modifier
                    .fillMaxWidth()
...
            visible = showBack,
            enter = fadeIn(),
            exit = fadeOut(),
            modifier = Modifier
                .padding(16.dp)
                .align(Alignment.TopStart)
                .testTag("backButton")
        ) {
            IconButton(
                onClick = { navigateBack() }) {
                Icon(
                    imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
                    contentDescription = stringResource(R.string.back),
...
            visible = showButton,
            enter = fadeIn() + slideInVertically(),
            exit = fadeOut() + slideOutVertically(),
            modifier = Modifier
                .padding(bottom = 30.dp)
                .align(Alignment.BottomCenter)
                .testTag("scrollToTopButton")
        ) {
            ScrollToTopButton(
                onClick = {
                    coroutineScope.launch {
                        scrollState.animateScrollTo(0)
                    }
...
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Row{
                SubcomposeAsyncImage(
                    model = classes,
                    contentScale = ContentScale.Fit,
                    contentDescription = "Classes",
                    modifier = Modifier.size(24.dp),
                    colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.onSecondary),
                    loading = {
                        Box(
                            modifier = Modifier.fillMaxSize(),
                            contentAlignment = Alignment.Center
...
                    style = MaterialTheme.typography.titleLarge)
            }
            Row{
                SubcomposeAsyncImage(
                    model = zodiac,
                    contentScale = ContentScale.Fit,
                    contentDescription = "Zodiac",
                    modifier = Modifier.size(24.dp),
                    colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.onSecondary),
                    loading = {
                        Box(
                            modifier = Modifier.fillMaxSize(),
                            contentAlignment = Alignment.Center
...
                        }
                    }
                )
                SubcomposeAsyncImage(
                    model = element,
                    contentScale = ContentScale.Fit,
                    contentDescription = "Element",
                    modifier = Modifier.size(24.dp),
                    loading = {
                        Box(
                            modifier = Modifier.fillMaxSize(),
                            contentAlignment = Alignment.Center
                        ) {
...
                        }
                    }
                )
                SubcomposeAsyncImage(
                    model = rarity,
                    contentScale = ContentScale.Fit,
                    contentDescription = "Rarity",
                    modifier = Modifier.size(width = 91.dp, height = 21.dp),
                    loading = {
                        Box(
                            modifier = Modifier.fillMaxSize(),
                            contentAlignment = Alignment.Center
                        ) {
...
