<resources>
    <string name="app_name">Epic7Hero</string>
    <string name="home_bottom_name">Home</string>
    <string name="favorite_bottom_name">Favorite</string>
    <string name="profile_bottom_name">Profile</string>
    <string name="hero_not_found">Hero tidak ditemukan!</string>
    <string name="search_bar_placeholder">Cari nama hero</string>
    <string name="no_favorite_hero">Tidak ada Hero Favorit</string>
    <string name="search_icon">Search Icon</string>
    <string name="hero_profile_image">Hero Profile Image</string>
    <string name="hero_class">Hero Class</string>
    <string name="status">Status</string>
    <string name="drop_down_icon">Drop Down Icon</string>
    <string name="hero_lore">Hero Lore</string>
    <string name="back">Back</string>
    <string name="full_name">I Wayan Satya Widhya Putra Pratama</string>
    <string name="gmail">wayanpratama38@gmail.com</string>
    <string name="attack">Attack</string>
    <string name="health">Health</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="skills">Skills</string>
</resources>