...
                onFavoriteClick = onFavoriteClick,
                navigateToDetail =  navigateToDetail
            )
        }else{
            Box(
                modifier = modifier.fillMaxSize()
                    .testTag("emptySearch"),
                contentAlignment = Alignment.Center
            ){
                Text(
                    text = stringResource(R.string.hero_not_found),
                    fontSize = 24.sp,
                    fontWeight = FontWeight.Bold
...
    heroes : List<Hero>,
    onFavoriteClick : (id : Long,newState : Boolean)->Unit,
    navigateToDetail: (Long) -> Unit,
    modifier : Modifier = Modifier
){
    LazyColumn(
        modifier = modifier.testTag("lazyColumn")
    ) {
        items(heroes,key= {it.id}){ data->
            HeroCard(
                id = data.id,
                name = data.name,
                profileImage = data.profileImage,
...
