...
                        onFavoriteClick(id, !isFavorite)
                    }
                    .size(32.dp)
                    .align(Alignment.CenterVertically)
                    .padding(end = 8.dp)
                    .clip(CircleShape)
                    .testTag("favoriteButton")
            )

        }
    }
}

...
